Drum Kit Project

--- a/Drum Kit Starting Files/index.html
+++ b/Drum Kit Starting Files/index.html
@@ -21,10 +21,13 @@
     <button class="l drum">l</button>
   </div>
 
+  
+
 
   <footer>
     Made with ❤️ in London.
   </footer>
+  <script src="index.js" charset="utf-8"></script>
 </body>
 
 </html>
